ZumZumFinancials_Dev1/src/objects/RDIAdaptiveSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Adaptive_Forecast_Version__c</fullName>
        <label>Adaptive Forecast Version</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adaptive_Password__c</fullName>
        <label>Adaptive Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adaptive_User_Name__c</fullName>
        <label>Adaptive User Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Per_Day__c</fullName>
        <label>Hours Per Day</label>
        <precision>8</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>RDI Adaptive Setting</label>
</CustomObject>